--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 node_modules/
-client/node_modules/
-server/node_modules/
 .env
-client/build/
 .DS_Store
+
+# Frontend
+client/node_modules/
+client/build/
+
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+
+# Backend  
+server/node_modules/
+
+server/.env
+server/.env.local
